Fix: dark mode

--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -19,5 +19,4 @@ html, body {
   font-family: 'Montserrat', sans-serif !important;
   height: auto !important;
   overflow: auto !important;
-  filter: invert(1) hue-rotate(180deg);
 }
